Update HTML and CSS

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     
     <p>NO <span>SPONSORS</span>. NO <span>SPOTLIGHT</span>. JUST <span>GRIT</span>, CRACKED PAVEMENT, AND THAT VOICE IN YOUR HEAD SAYING “GO AGAIN.”
         FROM THAT HUNGER, <span>VYRO</span> WAS BORN — A BRAND BUILT FROM THE STREET UP.</p>
-        <img src="/imgs/Woman.png" alt="">
+        <img src="./imgs/Woman.png" alt="">
 </div>
 </section>
 
