Update HMTL and CSS

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <h1>AND</h1> 
     <div class="line"></div>
 
-    <h1><span>PRECISION</span></h1> 
+    <h1 style="color: #EB3939;">PRECISION</h1> 
 </div>
 </section>
 
