Update HTML and CSS

--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
     </footer>
 <!-- HERO -->
 
-<main id="home" class="fade-up hero-section">
+<main id="home" class="hero-section">
+    <div class="fade-up hero-content">
 <h3>VYRO</h3>
 <h1>LIGHTING <br> <span>THE <br> STREETS </span> <br> WITH <br>POWER</h1> 
+</div>
 </main>
 
 <!-- INTRODUCTION -->
@@ -68,8 +70,8 @@
 </section>
 
 <!-- MOTO -->
-<section class="fade-up reason-section">
-    <div class="reason-content">
+<section class="reason-section">
+    <div class="fade-up reason-content">
         <h3>WHY WE EXIST</h3>
         <p>We make performance gear for <span>people</span> who move — <span>physically</span>, <span>mentally</span>, and <span>relentlessly</span>.</p>
     </div>
