--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <p>NO <span>SPONSORS</span>. NO <span>SPOTLIGHT</span>. JUST <span>GRIT</span>, CRACKED PAVEMENT, AND THAT VOICE IN YOUR HEAD SAYING “GO AGAIN.”
             FROM THAT HUNGER, <span>VYRO</span> WAS BORN — A BRAND BUILT FROM THE STREET UP.</p>
     </div>
-   
-        <img src="./imgs/Woman.png" alt="">
+   <div class="writing-image">        <img src="./imgs/Woman.png" alt="">
+   </div>
 </div>
 </section>
 
