Update HTML and CSS

--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
 
 <div class=" moto-content">
     <h3>OUR MOTO</h3>
-    <div class="line"></div>
-    <h1>WE</h1>
+    <div class="line"></div> 
+    <h1 style="  text-indent: 0.09ch;
+">WE</h1>
     <div class="line"></div>
 
     <h1>BRING</h1>
@@ -66,7 +67,8 @@
     <h1>POWER</h1>
     <div class="line"></div>
 
-    <h1>AND</h1> 
+    <h1 style="  text-indent: 0.15ch;
+">AND</h1> 
     <div class="line"></div>
 
     <h1 style="color: #EB3939;">PRECISION</h1> 
